; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/ipvs/extr_ip_vs_pe_sip.c_ip_vs_sip_hashkey_raw.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/ipvs/extr_ip_vs_pe_sip.c_ip_vs_sip_hashkey_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_conn_param = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ip_vs_conn_param*, i32, i32)* @ip_vs_sip_hashkey_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip_vs_sip_hashkey_raw(%struct.ip_vs_conn_param* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ip_vs_conn_param*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ip_vs_conn_param* %0, %struct.ip_vs_conn_param** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ip_vs_conn_param*, %struct.ip_vs_conn_param** %4, align 8
  %8 = getelementptr inbounds %struct.ip_vs_conn_param, %struct.ip_vs_conn_param* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.ip_vs_conn_param*, %struct.ip_vs_conn_param** %4, align 8
  %11 = getelementptr inbounds %struct.ip_vs_conn_param, %struct.ip_vs_conn_param* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @jhash(i32 %9, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @jhash(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
